--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Pirata+One&display=swap');
 @import "./index.css";
 @import "./preloader.css";
 @import "./particle.css";
@@ -18,12 +19,11 @@
 @import "./animated.css";
 @import "animate.css";
 @import "./card.css";
+
 * {
   padding: 0;
   margin: 0;
-  /* font-family: "Montserrat", sans-serif; */
   font-family: "Poppins", sans-serif;
-  /* overflow-x:clip; */
   scroll-behavior: smooth;
 }
 
@@ -51,4 +51,48 @@ body {
 a {
   text-decoration: none !important;
   color: inherit;
+}
+
+body {
+  font-family: 'Pirata One', cursive;
+}
+
+.scroll-image {
+  position: fixed;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-image: url('/images/scroll_background.png'); /* Adjusted path */
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
+
+.countdown-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: 1.5rem;
+  padding: 20px;
+  text-align: center;
+  position: relative; /* Added to ensure correct stacking context */
+  z-index: 1;
+}
+
+.time-unit {
+  margin: 0 10px;
+  text-align: center;
+}
+
+.number {
+  font-size: 4rem;
+  display: block;
+}
+
+.label {
+  font-size: 1.5rem;
 }
