--- a/styles/countdown.module.css
+++ b/styles/countdown.module.css
@@ -1,6 +1,10 @@
+.countContainer{
+margin-top: 50px;
+}
+
 .countContent {
 	width: 100%;
-	background-color: #DAA520;
+	background-color: transparent;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
