--- a/styles/countdown.module.css
+++ b/styles/countdown.module.css
@@ -1,12 +1,14 @@
-.countContainer{
+.countContainer {
 	margin-top: 30px;
-	background-color: #ffffff;
+	
 	padding: 10px;
 	display: flex;
 	flex-direction: column;
-}
-
-.countContent {
+	position: relative;
+	z-index: 10; /* Ensuring container is above other elements */
+  }
+  
+  .countContent {
 	width: 100%;
 	background-color: transparent;
 	display: flex;
@@ -14,24 +16,27 @@
 	justify-content: center;
 	margin: auto;
 	gap: 12px;
-}
-
-.countHeader{
+  }
+  
+  .countHeader {
 	display: flex;
-  	justify-content: center;
+	justify-content: center;
 	margin: 10px;
 	font-size: 30px;
-}
-
-.countTitle{
+	color: #FFD700; 
+	position: relative;
+	z-index: 20; /* Ensuring text is above other elements */
+  }
+  
+  .countTitle {
 	margin-bottom: 20px;
 	font-size: 50px;
-    font-family: 'Pirata One', cursive;
-    color: #FFD700;
-    text-shadow: 2px 2px #000;
-}
-
-.countBox {
+	font-family: 'Pirata One', cursive;
+	color: #FFD700;
+	text-shadow: 2px 2px #000;
+  }
+  
+  .countBox {
 	width: calc(100% / 4);
 	display: flex;
 	flex-direction: column;
@@ -39,9 +44,11 @@
 	justify-content: center;
 	height: 150px;
 	max-width: 150px;
-}
-
-.countValue {
+	position: relative;
+	z-index: 10; /* Ensuring box is above other elements */
+  }
+  
+  .countValue {
 	font-size: 30px;
 	font-weight: 600;
 	background: url('../public/images/bg.png') no-repeat center;
@@ -49,58 +56,61 @@
 	justify-content: center;
 	align-items: center;
 	border: 5px solid #DAA520;
-    text-shadow: 2px 2px #000;
-    border-radius: 10px;
+	text-shadow: 2px 2px #000;
+	border-radius: 10px;
 	width: 80px;
 	height: 80px;
 	position: relative;
 	box-shadow: -2px 0px 5px 1px #232423ad;
-    font-family: 'Pirata One', cursive;
-    color: #835211;
-}
-
-.countLabel {
+	font-family: 'Pirata One', cursive;
+	color: #835211;
+  }
+  
+  .countLabel {
 	font-size: 20px;
 	font-weight: 100;
 	letter-spacing: 4px;
 	margin-top: 10px;
 	font-family: 'Pirata One', cursive;
-}
-
-/* For small screen*/
-@media screen and (max-width:550px){
-	.countContent{
-		flex-direction: column;
-		align-items: center;
-		gap: 0px;
-	}
-}
-
-
-/* For large screen*/
-@media screen and (min-width: 550px) {
+	color: #FFD700;  
+	position: relative;
+	z-index: 20; /* Ensuring text is above other elements */
+  }
+  
+  /* For small screen */
+  @media screen and (max-width: 550px) {
 	.countContent {
-		gap: 30px;
+	  flex-direction: column;
+	  align-items: center;
+	  gap: 0px;
+	}
+  }
+  
+  /* For large screen */
+  @media screen and (min-width: 550px) {
+	.countContent {
+	  gap: 30px;
 	}
 	.countValue {
-		font-size: 50px;
-		width: 120px;
-		height: 120px;
+	  font-size: 50px;
+	  width: 120px;
+	  height: 120px;
 	}
 	.countBox {
-		height: 200px;
-		max-width: 200px;
+	  height: 200px;
+	  max-width: 200px;
 	}
-}
-
-@media screen and (min-width: 790px) {
+  }
+  
+  @media screen and (min-width: 790px) {
 	.countValue {
-		font-size: 100px;
-		height: 200px;
-		width: 200px;
+	  font-size: 100px;
+	  height: 200px;
+	  width: 200px;
 	}
 	.countBox {
-		max-width: 200px;
-		height: 250px;
+	  max-width: 200px;
+	  height: 250px;
 	}
-}
+  }
+  
