--- a/styles/about.css
+++ b/styles/about.css
@@ -19,13 +19,13 @@
 
 .rstar {
   position: absolute;
-  top: -25%;
-  left: -12%;
+  top: -20%;
+  left: -10%;
 }
 
 .topstar {
   animation: pulse 2s linear infinite;
-  width: 70%;
+  width: 50%;
   rotate: -6deg;
 }
 
@@ -133,13 +133,13 @@
 
 .frm.about-frm {
   bottom: -12%;
-  right: -20%;
+  right: -25%;
 }
 
 .frm.about-frm img {
-  width: 50%;
+  width: 55%;
   transform: rotate(25deg);
-  animation: rotatefull 20s linear infinite;
+  /* animation: rotatefull 20s linear infinite;*/
 }
 
 @media (max-width: 768px){
