--- a/styles/home.css
+++ b/styles/home.css
@@ -1,9 +1,9 @@
 /* Home */
-* {
+/* * {
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
-}
+} */
 
 @font-face {
   font-family: 'Caribbean';
